@@ -13,6 +13,7 @@
       <module fileurl="file://$PROJECT_DIR$/common/server/jminor-common-server.iml" filepath="$PROJECT_DIR$/common/server/jminor-common-server.iml" />
       <module fileurl="file://$PROJECT_DIR$/common/server-http/jminor-common-server-http.iml" filepath="$PROJECT_DIR$/common/server-http/jminor-common-server-http.iml" />
       <module fileurl="file://$PROJECT_DIR$/framework/db-core/jminor-framework-db-core.iml" filepath="$PROJECT_DIR$/framework/db-core/jminor-framework-db-core.iml" />
+      <module fileurl="file://$PROJECT_DIR$/plugins/db-http/jminor-framework-db-http.iml" filepath="$PROJECT_DIR$/plugins/db-http/jminor-framework-db-http.iml" />
       <module fileurl="file://$PROJECT_DIR$/framework/db-local/jminor-framework-db-local.iml" filepath="$PROJECT_DIR$/framework/db-local/jminor-framework-db-local.iml" />
       <module fileurl="file://$PROJECT_DIR$/framework/db-remote/jminor-framework-db-remote.iml" filepath="$PROJECT_DIR$/framework/db-remote/jminor-framework-db-remote.iml" />
       <module fileurl="file://$PROJECT_DIR$/framework/db-test/jminor-framework-db-test.iml" filepath="$PROJECT_DIR$/framework/db-test/jminor-framework-db-test.iml" />
@@ -29,7 +30,6 @@
       <module fileurl="file://$PROJECT_DIR$/swing/framework-model/jminor-swing-framework-model.iml" filepath="$PROJECT_DIR$/swing/framework-model/jminor-swing-framework-model.iml" />
       <module fileurl="file://$PROJECT_DIR$/swing/framework-ui/jminor-swing-framework-ui.iml" filepath="$PROJECT_DIR$/swing/framework-ui/jminor-swing-framework-ui.iml" />
       <module fileurl="file://$PROJECT_DIR$/swing/framework-ui-test/jminor-swing-framework-ui-test.iml" filepath="$PROJECT_DIR$/swing/framework-ui-test/jminor-swing-framework-ui-test.iml" />
-      <module fileurl="file://$PROJECT_DIR$/plugins/db-http/plugin-db-http.iml" filepath="$PROJECT_DIR$/plugins/db-http/plugin-db-http.iml" />
       <module fileurl="file://$PROJECT_DIR$/plugins/hikari-pool/plugin-hikari-pool.iml" filepath="$PROJECT_DIR$/plugins/hikari-pool/plugin-hikari-pool.iml" />
       <module fileurl="file://$PROJECT_DIR$/plugins/imagepanel/plugin-imagepanel.iml" filepath="$PROJECT_DIR$/plugins/imagepanel/plugin-imagepanel.iml" />
       <module fileurl="file://$PROJECT_DIR$/plugins/jasperreports/plugin-jasperreports.iml" filepath="$PROJECT_DIR$/plugins/jasperreports/plugin-jasperreports.iml" />
