@@ -1,5 +1,5 @@
-<project name="jminor-plugin-db-http">
+<project name="jminor-framework-db-http">
   <property name="project.root" value="../.."/>
-  <property name="java.module.name" value="org.jminor.plugin.db.http"/>
+  <property name="java.module.name" value="org.jminor.framework.db.http"/>
   <import file="${project.root}/build-common.xml"/>
 </project>
